src/Experiences/Experiences.css
.experience-timeline {
    background-color: white;
}

[data-darkmode=false] .experience-timeline {
    background-color: #222;
}
.timeline-dots {
    margin-left: -12px;
    width: 9px;
    height: 9px;
}

[data-darkmode=false] .timeline-dots {
    background-color: #222;
}

.timeline-div {
    height: 650px;
    margin-top: -650px;
}

.experience-timeline {
    height: 630px;
}

@media (max-width: 540px) {
    .timeline-div {
        height: 594px;
        margin-top: -591px;
    }
    .experience-timeline {
        height: 600px;
    }
}

